# pyram

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
pyram/: PyRAM.py  PyRAMmp.py  RAMinput.py  __init__.py  inputSchema.py  matrc.py  outpt.py  readRAM.py  solve.py
pyram/Tests/: TestPyRAM.py  __init__.py  ramOriginal.yaml  tl.line
